labs/07-networkpolicy/apps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: study
  labels:
    role: frontend
spec:
  containers:
    - name: shell
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: study
  labels:
    role: backend
    app: backend-api
spec:
  containers:
    - name: echo
      image: hashicorp/http-echo:0.2.3
      args: ["-text=backend ok"]
      ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: study
spec:
  selector:
    app: backend-api
  ports:
    - port: 5678
      targetPort: 5678
