labs/07-networkpolicy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: study
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
